# cmd/main.go
@@ -84,6 +84,7 @@ func main() {
 	router.GET("/api/categories/subcategories", categoryController.GetImmediateSubcategories)
 	router.POST("/api/attributes/values/images", attributeController.AddAttributeValueImage)
 	router.GET("/api/attributes/values/:attribute_value_id/images", attributeController.GetAttributeValueImage)
+	router.GET("/api/categories/attributes", categoryController.GetCategoryAttributesByCategoryID)
 
 	// Новый публичный маршрут для поиска категории по path
 	router.GET("/api/categories/search", supplierController.GetCategoryByPath) // Перемещен в публичные маршруты
