# docs/swagger.json
@@ -37,7 +37,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_controllers.CategoryNode"
+                                "$ref": "#/definitions/internal_controllers.CategoryNode"
                             }
                         }
                     },
@@ -106,6 +106,51 @@
             }
         },
         "/api/categories/attributes": {
+            "get": {
+                "description": "Получает список атрибутов, связанных с категорией по её ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Get category attributes by category ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Category ID",
+                        "name": "category_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_models.CategoryAttribute"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_utils.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_utils.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Добавляет новый атрибут, связанный с определенной категорией",
                 "consumes": [
@@ -125,7 +170,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_controllers.AddCategoryAttributeRequest"
+                            "$ref": "#/definitions/internal_controllers.AddCategoryAttributeRequest"
                         }
                     }
                 ],
@@ -232,7 +277,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_controllers.Category"
+                                "$ref": "#/definitions/internal_controllers.Category"
                             }
                         }
                     },
@@ -277,7 +322,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_controllers.Category"
+                            "$ref": "#/definitions/internal_controllers.Category"
                         }
                     },
                     "400": {
@@ -323,7 +368,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_WhyDias_Marketplace_internal_controllers.CategoryAttribute"
+                                "$ref": "#/definitions/internal_controllers.CategoryAttribute"
                             }
                         }
                     },
@@ -1144,7 +1189,13 @@
                 "category_id": {
                     "type": "integer"
                 },
+                "description": {
+                    "type": "string"
+                },
                 "name": {
+                    "type": "string"
+                },
+                "type_of_option": {
                     "type": "string"
                 }
             }
@@ -1541,6 +1592,26 @@
                 }
             }
         },
+        "github_com_WhyDias_Marketplace_internal_models.CategoryAttribute": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type_of_option": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_WhyDias_Marketplace_internal_models.Color": {
             "type": "object",
             "properties": {
@@ -1569,6 +1640,10 @@
                 "category_id": {
                     "type": "integer"
                 },
+                "category_name": {
+                    "description": "Добавляем это поле",
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -1589,6 +1664,9 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "status_id": {
+                    "type": "integer"
                 },
                 "stock": {
                     "type": "integer"
@@ -1767,7 +1845,13 @@
                 "category_id": {
                     "type": "integer"
                 },
+                "description": {
+                    "type": "string"
+                },
                 "name": {
+                    "type": "string"
+                },
+                "type_of_option": {
                     "type": "string"
                 }
             }
